# intcode

./: 404.html  Cargo.toml  README.md  index.081c98bd.js  index.081c98bd.js.map  index.147c6234.css  index.147c6234.css.map  index.18b62946.js  index.18b62946.js.map  index.46625752.js  index.46625752.js.map  index.5acc1ee6.js  index.5acc1ee6.js.map  index.8c34f095.js  index.8c34f095.js.map  index.e2f47f48.js  index.e2f47f48.js.map  index.ec23e3a2.js  index.ec23e3a2.js.map  index.html  intcode_wasm_bg.72c12a3d.wasm  intcode_wasm_bg.83b2863a.wasm  intcode_wasm_bg.d9962e10.wasm
.github/workflows/: playground.yaml  web.yaml
_next/static/chunks/: 981.38a4e3fee5b7199b.js
_next/static/chunks/pages/: index-2518bc360fb812f5.js
_next/static/wasm/: ee31d76c9609f2be.wasm
assemble/: Cargo.toml
assemble/src/: ast.rs  error.rs  lex.rs  lib.rs  parse.rs  span.rs
assemble/src/lex/: tests.rs
assemble/src/parse/: integer.rs  string.rs  tests.rs  unpack.rs
assemble/tests/: advent.rs  errors.rs
cli/: Cargo.toml
cli/src/: fmt.rs  main.rs
core/: Cargo.toml
core/assemble/: Cargo.toml
core/assemble/src/: assemble.rs  ast.rs  error.rs  fmt.rs  lex.rs  lib.rs  parse.rs  run.rs  span.rs
core/assemble/src/assemble/: ast.rs  parse.rs
core/assemble/src/assemble/parse/: integer.rs
core/assemble/src/lex/: tests.rs
core/assemble/src/parse/: integer.rs  string.rs  tests.rs
core/assemble/tests/: advent.rs  errors.rs  run.rs  warnings.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/error/: Cargo.toml
core/error/src/: fmt.rs  span.rs
core/intcode/: Cargo.toml
core/intcode/src/: lib.rs
core/lex/: Cargo.toml
core/lex/src/: lib.rs  parse.rs
core/pretty/: Cargo.toml
core/pretty/src/: lib.rs
core/run/: Cargo.toml
core/src/: assemble.rs  error.rs  fmt.rs  lib.rs  run.rs
core/src/assemble/: lex.rs  parse.rs
core/src/assemble/parse/: string.rs  tests.rs
core/src/run/: io.rs
core/tests/: advent.rs  errors.rs
examples/: echo.ints  fizzbuzz.ints  function.ints  hello-world.ints
frontend/cli/: Cargo.toml
frontend/cli/src/: fmt.rs  log.rs  main.rs  run.rs
frontend/playground/: .gitignore  next.config.js  package.json  styles.css  tailwind.config.js
frontend/playground/hack/: intcode.js
frontend/playground/pages/: _app.js  index.js
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
frontend/web/: index.css  index.js  package-lock.json  package.json  wasm-pack.sh
intcode/: Cargo.toml
intcode/assemble/: Cargo.toml
intcode/assemble/src/: ast.rs  lib.rs  parse.rs
intcode/assemble/tests/: advent.rs  errors.rs
intcode/disassemble/: Cargo.toml
intcode/disassemble/src/: ast.rs  dynamic.rs  dynamically.rs  fmt.rs  labels.rs  lib.rs  mem.rs  program.rs  statically.rs
intcode/disassemble/tests/: advent.rs  basic.rs
intcode/error/: Cargo.toml
intcode/error/src/: lib.rs
intcode/lex/: Cargo.toml
intcode/lex/src/: lib.rs
intcode/run/: Cargo.toml
intcode/run/src/: lib.rs
intcode/src/: lib.rs
run/: Cargo.toml
run/src/: io.rs  lib.rs
src/: assemble.rs  ast.rs  compile.rs  error.rs  lex.rs  main.rs  parse.rs
wasm/: Cargo.toml
wasm/src/: fmt.rs  lib.rs
web/: .gitignore  Cargo.toml  index.css  index.html  index.js  package-lock.json  syntax.js  wasm-pack.sh
web/src/: bindings.rs  main.rs
