[package]
name = "intcode"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
publish = false

[dependencies]
intcode-assemble = { path = "assemble" }
intcode-disassemble = { path = "disassemble", optional = true }
intcode-error = { path = "error" }
intcode-run = { path = "run" }

[features]
disassemble = ["intcode-disassemble"]
