[package]
name = "intcode-wasm"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
intcode = { package = "intcode-core", path = "../core"}
once_cell = "1.8.0"
serde = { version = "1.0.128", features = ["derive"] }
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
yansi = "0.5.0"
