[package]
name = "intcode-wasm"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
intcode = { path = "../core/intcode" }
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
wasm-bindgen = { version = "0.2.77", features = ["serde-serialize"] }
