[package]
name = "intcode-web"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
intcode = { package = "intcode-core", path = "../core"}
log = "0.4.14"
wasm-bindgen = "0.2.75"
yansi = "0.5.0"
yew = { git = "https://github.com/yewstack/yew" }
