[package]
name = "intcode-assemble"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
dairy = "0.2.2"
either = "1.6.1"
indexmap = "1.7.0"
thiserror = "1.0.26"
unicode-width = "0.1.8"
yansi = "0.5.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
