[package]
name = "intcode"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.42"
assemble = { package = "intcode-assemble", path = "../assemble" }
atty = "0.2.14"
clap = "3.0.0-beta.2"
indexmap = "1.7.0"
run = { package = "intcode-run", path = "../run" }
thiserror = "1.0.26"
yansi = "0.5.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
