[package]
name = "intcode-cli"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
publish = false
default-run = "intcode"

[[bin]]
name = "intcode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
clap = "3.0.0-beta.4"
clap_derive = "3.0.0-beta.4"
intcode = { path = "../../intcode", features = ["disassemble"] }
log = "0.4.14"
yansi = "0.5.0"
