[package]
name = "intcode-assemble"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

[dependencies]
dairy = "0.2.2"
indexmap = "1.7.0"
intcode-error = { path = "../error" }
intcode-lex = { path = "../lex" }

[dev-dependencies]
intcode-run = { path = "../run" }
pretty_assertions = "0.7.2"
